# infinite-chess

./: .gitignore  README.md  RULES.md  TEST_CASES.md  generate_starting_position_svg.py  generate_static_topology.py  generate_test_visuals.py  package-lock.json  package.json  pyproject.toml  tailwind.config.js  topology_chess.html  vite.config.ts
apps/backend/: pyproject.toml
apps/backend/game/: board.py  logic.py  test_board.py  test_comprehensive.py  test_setup_tdd.py  test_tdd_failures.py  tests.py
apps/backend/src/backend/core/: settings.py
apps/frontend/: package-lock.json  package.json
apps/frontend/src/: App.tsx
apps/frontend/src/components/: Board.tsx
engine/: pyproject.toml
engine/infinite_chess_engine.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
engine/tests/: test_board.py  test_comprehensive.py  test_logic.py  test_setup_tdd.py  test_tdd_failures.py
src/: App.tsx  index.html
src/board/: board.py  logic.py  svg.py  testing.py
src/board/moves/: bishop.py  common.py  king.py  knight.py  pawn.py  queen.py  rook.py
src/board/scripts/: generate_docs.py
src/components/: Board.tsx
src/infinite_chess.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/server/: manage.py
src/server/core/: asgi.py  settings.py  wsgi.py
src/server/game/: apps.py  consumers.py
tests/: README.md  VISUAL_TESTS.md
tests/board/: test_bishops.md  test_bishops.py  test_board.md  test_board.py  test_comprehensive.md  test_comprehensive.py  test_logic.md  test_logic.py  test_pawns.md  test_pawns.py  test_setup_tdd.md  test_setup_tdd.py  test_tdd_failures.md  test_tdd_failures.py
