[project]
name = "infinite-chess"
version = "0.1.0"
description = "Infinite Chess with a Lemniscate board"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django"
]

[project.scripts]
manage = "server.manage:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-django"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --tb=short"
markers = [
    "board: tests for the core chess logic",
    "server: tests for the django implementation"
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
extend-select = ['B', 'C4', 'ISC', 'A', 'N', 'I', 'PGH']
ignore = ["E402", "ISC001", "F401"]
