[project]
name = "infinite-chess-engine"
version = "0.1.0"
description = "Core logic and move generation for Infinite Chess"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest"
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
