[project]
name = "backend"
version = "0.1.0"
description = "Infinite Chess Django Server"
requires-python = ">=3.10"
dependencies = [
    "django",
    "channels[daphne]",
    "infinite-chess-engine"
]

[tool.uv.sources]
infinite-chess-engine = { path = "../../engine" }

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-django"
]
